# zmq-tools

./: CMakeLists.txt  README.md
src/: client.c  config.h.in  server.c  utils.c  utils.h
